[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "advent-of-code-2016"
version = "0.1.0"
description = "Advent of Code 2016 Solutions"
authors = [
    {name = "Flo", email = "flo@reitz.dev"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest-benchmark>=4.0.0",
    "mypy>=1.5.0",
    "pre-commit>=3.4.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["solutions*", "utils*"]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
